fix: add more p0 fixes with nav, and spacing

--- a/src/assets/styles/pc-only.css
+++ b/src/assets/styles/pc-only.css
@@ -6,7 +6,7 @@
     /* text-transform: uppercase; */
   }
   .roaming-container {
-    margin: 100px 0px;
+    margin: 50px 0px;
   }
   .page-slogan {
     font-weight: 400;
@@ -164,7 +164,7 @@
   }
 
   .b-hero-img {
-    height: 68vh;
+    height: 82vh;
   }
 
   .new-one-box img {
